Uzycie basename w opcji -h do nazwy programu

--- a/.deps/main.Po
+++ b/.deps/main.Po
@@ -16,7 +16,9 @@ main.o: main.c /usr/include/stdc-predef.h /usr/include/ctype.h \
  /usr/include/bits/select.h /usr/include/bits/sigset.h \
  /usr/include/bits/time.h /usr/include/sys/sysmacros.h \
  /usr/include/bits/pthreadtypes.h /usr/include/alloca.h \
- /usr/include/bits/stdlib-float.h /usr/include/getopt.h test.h
+ /usr/include/bits/stdlib-float.h /usr/include/getopt.h \
+ /usr/include/string.h /usr/include/bits/string.h \
+ /usr/include/bits/string2.h test.h
 
 /usr/include/stdc-predef.h:
 
@@ -91,5 +93,11 @@ main.o: main.c /usr/include/stdc-predef.h /usr/include/ctype.h \
 /usr/include/bits/stdlib-float.h:
 
 /usr/include/getopt.h:
+
+/usr/include/string.h:
+
+/usr/include/bits/string.h:
+
+/usr/include/bits/string2.h:
 
 test.h:
